--- a/public/app.css
+++ b/public/app.css
@@ -30,8 +30,11 @@
 }
 
 body {
+  background: url('https://unsplash.imgix.net/21/shaggy.JPG?q=75&fm=jpg&s=2cce7b62caf40ee63ed9e86c1600f12e') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-image: url('https://unsplash.imgix.net/21/shaggy.JPG?q=75&fm=jpg&s=2cce7b62caf40ee63ed9e86c1600f12e');
 }
 
 #header-wrap {
@@ -82,7 +85,7 @@ body {
   border: none !important;
   font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
-  padding-left: 20px;
+  /*padding-left: 20px;*/
 }
 
 .control {
@@ -107,8 +110,12 @@ body {
   width: 100%;
   padding: 15px;
   padding-left: 20px;
-  background-color: rgba(255,255,255,0.55);
+  background-color: rgba(255,255,255,0.7);
   font-family: 'Open Sans', sans-serif;
+  overflow: hidden;
+  display: block;
+  max-height: 100px;
+  text-overflow: ellipsis;
 }
 
 .name {
@@ -117,18 +124,33 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-.artist {
-  color: rgba(0,0,0,0.65);
-  margin-left: 13px;
-}
-
-.item .thumbnail {
+.thumbnail {
+  display: block;
+  width: auto;
+  height: auto;
+  max-width: 15%;
   float: left;
 }
 
-.item .deets {
+.deets {
+  width: 75%;
   float: left;
   padding-left: 10px;
+}
+
+.upvotes {
+  width: 10%;
+  float: right;
+  padding-top: 12px;
+  padding-right: 10px;
+  font-size: 2em;
+}
+
+.upvotes_green {
+  color: rgb(25,150,10);
+}
+.upvotes_red {
+  color: rgb(190,10,10);
 }
 
 .ui-menu .ui-menu-item a{
@@ -139,7 +161,15 @@ body {
   height: 50px;
   padding-top: 5px;
   padding-bottom: 5px;
-} 
+  /*overflow: hidden;*/
+}
+
+.ui-autocomplete {
+    overflow-y: auto;
+    /* prevent horizontal scrollbar */
+    overflow-x: hidden;
+    position:absolute;
+  }
 
 .dropthumbnail {
   height: 100%;
@@ -174,26 +204,6 @@ h1 {
   font-family: 'Open Sans', sans-serif;
 }
 
-.dropartist {
-  font-size: 0.8em;
-  font-family: 'Open Sans', sans-serif;
-}
-
-
-.upvotes {
-  float: right;
-  padding-top: 12px;
-  padding-right: 10px;
-  font-size: 2em;
-}
-
-.upvotes_green {
-  color: rgb(25,150,10);
-}
-.upvotes_red {
-  color: rgb(190,10,10);
-}
-
 #progress {
   width:100%;
   height: 4px;
@@ -206,7 +216,7 @@ h1 {
 }
 #progress .background {
   position: absolute;
-  width:100%;
+  width: 100%;
   height: 4px;
   background-color: #777;
 }
