--- a/public/app.css
+++ b/public/app.css
@@ -29,7 +29,13 @@
   padding: 0;
 }
 
+html {
+  height: 100%;
+  min-height: 100%;
+}
+
 body {
+  min-height:100%;
   background: url('https://unsplash.imgix.net/21/shaggy.JPG?q=75&fm=jpg&s=2cce7b62caf40ee63ed9e86c1600f12e') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
